refactor: move get anomalyspan to alerts
