# backend/pkg/api/service/handler.go
@@ -118,11 +118,6 @@ type Handler interface {
 	// @Tags API.service
 	// @Router /api/service/entry/endpoints [get]
 	GetServiceEntryEndpoints() core.HandlerFunc
-
-	// GetAnomalySpan 获取服务和根因类型的故障报告
-	// @Tags API.service
-	// @Router /api/service/anomaly-span/list [post]
-	GetAnomalySpan() core.HandlerFunc
 }
 
 type handler struct {
